@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11056] "fjern @Ignore fra FlowMapCreatorTest.createMapTest()"
    - bug [11051] "Der skal laves en type include-funktionalitet til brug i javascripts."
    - bug [10900] "Mystisk test case i CargoContainerTest"
    - bug [11055] "option: "bench" virker ikke mere."
